# thetadata-python

./: .gitignore  404.html  LICENSE  README.md  __init__.py  connection_msgs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: main.yml  python-publish.yml
JupyterNotebook/: strategy_implementation.ipynb
dev/: __init__.py  dev.py  test.py
docs/: connection_msgs.py  end_of_day.py  end_of_day_opt.py  end_of_day_stk.py  explanation.md  first_request.py  get_last.py  get_last_opt.py  get_last_stk.py  how-to-guides.md  index.md  list_roots.py  list_roots_opt.py  list_roots_stk.py  manipulate_df.py  manipulate_series.py  reference.md  tutorials.md
docs/options/: eod.py  get_last.py  list_roots.py  open_interest_streaming.py  quote_streaming.py  trade_streaming.py  trade_streaming_full.py
docs/stocks/: get_last.py  list_roots.py
explanation/: index.html
how-to-guides/: index.html
net/thetadata/api/: App.py
net/thetadata/api/io/: tclient.py
net/thetadata/api/types/: MessageType.py  ReqArg.py  ReqType.py  RequestException.py
options/: cancel_streams.py  quote_1min.py  quote_tick.py  trade_streaming.py  trade_streaming_full.py
reference/: index.html
stocks/: eod.py  quote_1min.py  quote_tick.py
tests/: __init__.py  test_client.py  test_docs.py
thetadata/: __init__.py  client.py  enums.py  exceptions.py  models.py  parsing.py  terminal.py
tutorials/: index.html
