[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thetadata"
version = "0.7.3"
authors = [
  { name="Adler Weber", email="redacted@thetadata.net" },
  { name="Bailey Danseglio", email="bailey@thetadata.net" },
]
description = "Python API for ThetaData"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "tqdm",
  "pandas",
  "wget",
]

[project.optional-dependencies]
tests = [
  "coverage>=5.0.3",
  "pytest",
  "pytest-benchmark[histogram]>=3.2.1",
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material"
]

[project.urls]
"Homepage" = "https://thetadata.net"
"Source" = "https://thetadata-api.github.io/PythonAPI/reference/"
"Bug Tracker" = "https://github.com/ThetaData-API/PythonAPI/issues"
"Documentation" = "https://thetadata-api.github.io/PythonAPI/"
